--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "biwascheme",
+    "name": "@acransac/biwascheme",
     "description": "A practical Scheme interpreter written in JavaScript",
-    "version": "0.7.0",
+    "version": "0.7.0+1.0.0",
     "author": "Yutaka HARA <yutaka.hara.gmail.com>",
     "license": "MIT",
     "homepage": "https://www.biwascheme.org/",
