* Added credits to the author and maintainers * Added license file to npm package * Changed version number format * Updated to version v0.7.0-101

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@acransac/biwascheme",
     "description": "A practical Scheme interpreter written in JavaScript",
-    "version": "0.7.0+1.0.0",
+    "version": "0.7.0-101",
     "author": "Yutaka HARA <yutaka.hara.gmail.com>",
     "license": "MIT",
     "homepage": "https://www.biwascheme.org/",
@@ -38,6 +38,7 @@
     },
     "files": [
         "bin/biwas",
+        "MIT-LICENSE.txt",
         "release/node_biwascheme.js"
     ]
 }
